--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@headlessui/react": "^2.2.0",
     "file-saver": "2.0.5",
     "jquery": "^3.7.1",
+    "qs": "^6.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.2",
@@ -37,6 +38,7 @@
     "@types/chrome": "^0.0.246",
     "@types/file-saver": "^2.0.7",
     "@types/jquery": "^3.5.32",
+    "@types/qs": "^6.9.18",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^18.2.13",
     "@vitejs/plugin-react": "^4.1.0",
